--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -11,23 +11,25 @@
     <div class="hamburger-line"></div>
   </button>
 
-  <ul class="ml-auto flex items-center">
-    <li class="dropdown ml-3">
-      <button type="button" class="dropdown-toggle flex items-center">
-        <div class="flex-shrink-0 w-10 h-10 relative">
-          <div class="p-1 bg-white rounded-full">
-            <img
-              *ngIf="userProfile?.profile_image"
-              [attr.loading]="'lazy'"
-              class="h-8 w-8 rounded-full"
-              [src]="userProfile.profile_image.startsWith('http') 
-                ? userProfile.profile_image 
-                : 'http://localhost:5006/uploads/' + userProfile.profile_image"
-              alt="Profile Image"
-            />
-          </div>
+  <ul class="ml-auto flex items-center space-x-4">
+    <li class="relative">
+      <button 
+        type="button"
+        class="flex items-center space-x-3 p-2 rounded-lg transition hover:bg-gray-100"
+        [routerLink]="'/dashboard/profile'" 
+      >
+        <div class="relative w-12 h-12">
+          <img
+            *ngIf="userProfile?.profile_image"
+            [attr.loading]="'lazy'"
+            class="w-12 h-12 rounded-full border-2 border-gray-300 shadow-sm"
+            [src]="userProfile.profile_image.startsWith('http') 
+              ? userProfile.profile_image 
+              : 'http://localhost:5006/uploads/' + userProfile.profile_image"
+            alt="Profile Image"
+          />
         </div>
-        <div class="p-2 text-left">
+        <div class="text-left">
           <h2 class="text-sm font-semibold text-gray-800">
             {{ userProfile?.first_name || 'N/A' }} {{ userProfile?.last_name || 'N/A' }}
           </h2>
@@ -36,4 +38,4 @@
       </button>
     </li>
   </ul>
-</div>
+  
