--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -44,7 +44,7 @@
         <span class="text-ml">Profile</span>
       </a>
     </li>
-    <li class="mb-1 group">
+    <li class="mb-1 group" *ngIf="userProfile?.role === 'Admin'">
       <a
         routerLink="/dashboard/user-management"
         routerLinkActive="bg-gray-200 text-gray-900"
@@ -53,7 +53,7 @@
         <i class="bx bx-user mr-3 text-lg"></i>
         <span class="text-ml">User Management</span>
       </a>
-    </li>
+    </li>      
     <li class="mb-1 group">
       <a
         routerLink="/dashboard/dashboard-iotmap-device"
@@ -64,26 +64,6 @@
         <span class="text-ml">Map</span>
       </a>
     </li>
-
-    <span class="text-gray-500 font-bold py-2 px-3">BLOG</span>
-    <li class="mb-1 group">
-      <a
-        href="#"
-        class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-100 rounded-md"
-      >
-        <i class="bx bxl-blogger mr-3 text-lg"></i>
-        <span class="text-ml">Post</span>
-      </a>
-    </li>
-    <li class="mb-1 group">
-      <a
-        href="#"
-        class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-100 rounded-md"
-      >
-        <i class="bx bx-archive mr-3 text-lg"></i>
-        <span class="text-ml">Archive</span>
-      </a>
-    </li>
   </ul>
 
   <hr class="logout-divider my-4" />
@@ -91,7 +71,7 @@
   <div class="logout-container">
     <a
       (click)="logout()"
-      class="flex font-semibold items-center py-2 px-4 text-red-600 hover:bg-red-100 rounded-md cursor-pointer"
+      class="flex font-semibold items-center py-8 px-8 text-red-600 hover:bg-red-100 rounded-md cursor-pointer"
     >
       <i class="bx bx-log-out mr-3 text-lg"></i>
       <span class="text-ml">Logout</span>
