--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -42,15 +42,10 @@
       </div>
       <!-- Remember Me -->
       <div class="flex items-center justify-between">
-        <div class="flex items-center">
-          <input
-            type="checkbox"
-            [(ngModel)]="rememberMe"
-            name="rememberMe"
-            class="mr-2 w-4 h-4"
-          />
-          <label class="text-sm md:text-base text-black dark:text-gray-300">Remember Me</label>
-        </div>
+        <a routerLink="/request-password-reset"
+         class="text-sm md:text-base font-medium text-green-500 hover:underline">
+          Forgot your password?
+        </a>        
       </div>
       <!-- Submit Button -->
       <div class="flex justify-center">
