--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,14 +1,36 @@
-<section class="bg-gray-50 dark:bg-gray-900">
-  <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-    <div class="w-full p-6 bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md dark:bg-gray-800 dark:border-gray-700 sm:p-8">
-      <h2 class="mb-1 text-xl font-bold text-gray-900 dark:text-white">Change Password</h2>
-      <form class="mt-4 space-y-4" (ngSubmit)="resetPassword()">
-        <div>
-          <label for="password" class="block text-sm font-medium text-gray-900 dark:text-white">New Password</label>
-          <input type="password" [(ngModel)]="newPassword" name="password" id="password" class="w-full p-2 border rounded-lg" required />
+<section class="bg-gray-50 dark:bg-gray-900 min-h-screen flex items-center justify-center px-4">
+  <div class="w-full max-w-md bg-white rounded-lg shadow-md dark:border dark:bg-gray-800 dark:border-gray-700 p-6">
+    <h2 class="mb-4 text-2xl font-bold text-gray-900 dark:text-white text-center">Change Password</h2>
+
+    <form class="space-y-6" (ngSubmit)="resetPassword()">
+      <div class="relative">
+        <label for="password" class="block text-sm font-medium text-gray-900 dark:text-white mb-2">New Password</label>
+        <div class="relative">
+          <input 
+            [type]="passwordVisible ? 'text' : 'password'"
+            [(ngModel)]="newPassword"
+            name="password"
+            id="password"
+            class="w-full p-3 border rounded-lg pr-10 dark:bg-gray-700 dark:text-white"
+            required
+          />
+          <!-- ปุ่มเปิด/ปิดรหัสผ่าน -->
+          <button 
+            type="button"
+            class="absolute inset-y-0 right-3 flex items-center text-gray-500 dark:text-gray-400"
+            (click)="togglePasswordVisibility()"
+          >
+            <i class="fas" [ngClass]="passwordVisible ? 'fa-eye-slash' : 'fa-eye'"></i>
+          </button>
         </div>
-        <button type="submit" class="w-full bg-blue-500 text-white p-2 rounded-lg hover:bg-blue-700">Reset Password</button>
-      </form>
-    </div>
+      </div>
+
+      <button 
+        type="submit"
+        class="w-full bg-blue-500 text-white p-3 rounded-lg hover:bg-blue-700 transition duration-200"
+      >
+        Reset Password
+      </button>
+    </form>
   </div>
 </section>
